{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 551,
  "lineage": "53e9e0ac-76ae-9a0c-06de-883dc4231197",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ext-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "int-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:318867684519:loadbalancer/app/int-alb/fbc5de4db7b4f702",
            "arn_suffix": "app/int-alb/fbc5de4db7b4f702",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-int-alb-1337327460.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:318867684519:loadbalancer/app/int-alb/fbc5de4db7b4f702",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "int-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0982bbe6ad0cfebdc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05f158a03d0d5fe90"
              },
              {
                "subnet_id": "subnet-0ef68cc6e0cd4ef81"
              }
            ],
            "subnets": [
              "subnet-05f158a03d0d5fe90",
              "subnet-0ef68cc6e0cd4ef81"
            ],
            "tags": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "ACS-int-alb",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "tags_all": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "ACS-int-alb",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "vpc_id": "vpc-0a3d810c316726b8e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_subnet.private1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "nginx-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:318867684519:listener/app/int-alb/fbc5de4db7b4f702/6770ee1388ed9313",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:318867684519:targetgroup/wordpress-tgt/288a58269f0f5c5b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:318867684519:listener/app/int-alb/fbc5de4db7b4f702/6770ee1388ed9313",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:318867684519:loadbalancer/app/int-alb/fbc5de4db7b4f702",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.int-alb",
            "aws_alb_target_group.wordpress-tgt",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:318867684519:targetgroup/tooling-tgt/b1adf0ceed3b1d42",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:318867684519:listener-rule/app/int-alb/fbc5de4db7b4f702/6770ee1388ed9313/2cbfbdbf0ce7fa08",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.cbajenkins.co.uk"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:318867684519:listener-rule/app/int-alb/fbc5de4db7b4f702/6770ee1388ed9313/2cbfbdbf0ce7fa08",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:318867684519:listener/app/int-alb/fbc5de4db7b4f702/6770ee1388ed9313",
            "priority": 99,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.int-alb",
            "aws_alb_listener.web-listener",
            "aws_alb_target_group.tooling-tgt",
            "aws_alb_target_group.wordpress-tgt",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "nginx-tgt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:318867684519:targetgroup/nginx-tgt1/4d4ea61dc41e6b15",
            "arn_suffix": "targetgroup/nginx-tgt1/4d4ea61dc41e6b15",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:318867684519:targetgroup/nginx-tgt1/4d4ea61dc41e6b15",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-tgt1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a3d810c316726b8e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "tooling-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:318867684519:targetgroup/tooling-tgt/b1adf0ceed3b1d42",
            "arn_suffix": "targetgroup/tooling-tgt/b1adf0ceed3b1d42",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:318867684519:targetgroup/tooling-tgt/b1adf0ceed3b1d42",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tooling-tgt",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a3d810c316726b8e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:318867684519:targetgroup/wordpress-tgt/288a58269f0f5c5b",
            "arn_suffix": "targetgroup/wordpress-tgt/288a58269f0f5c5b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:318867684519:targetgroup/wordpress-tgt/288a58269f0f5c5b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-tgt",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a3d810c316726b8e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce0a548293b646cb",
            "domain": "vpc",
            "id": "eipalloc-0ce0a548293b646cb",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-78-122-222.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.78.122.222",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "ak-eip-EIP",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "tags_all": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "ak-eip-EIP",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:318867684519:internet-gateway/igw-0b3dfee59dd2f239f",
            "id": "igw-0b3dfee59dd2f239f",
            "owner_id": "318867684519",
            "tags": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "vpc-0a3d810c316726b8e-IG!",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "tags_all": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "vpc-0a3d810c316726b8e-IG!",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "vpc_id": "vpc-0a3d810c316726b8e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b3dfee59dd2f239f",
            "id": "r-rtb-0bcbe16e6da9d4f0a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bcbe16e6da9d4f0a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rtb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:318867684519:route-table/rtb-0d38c721398eb2091",
            "id": "rtb-0d38c721398eb2091",
            "owner_id": "318867684519",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "ak-eip-Private-Route-Table",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "tags_all": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "ak-eip-Private-Route-Table",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d810c316726b8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:318867684519:route-table/rtb-0bcbe16e6da9d4f0a",
            "id": "rtb-0bcbe16e6da9d4f0a",
            "owner_id": "318867684519",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "ak-eip-Public-Route-Table",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "tags_all": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "ak-eip-Public-Route-Table",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d810c316726b8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b810c94d6bb2c9f0",
            "route_table_id": "rtb-0d38c721398eb2091",
            "subnet_id": "subnet-05f158a03d0d5fe90"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c914771e3d82a47e",
            "route_table_id": "rtb-0d38c721398eb2091",
            "subnet_id": "subnet-0ef68cc6e0cd4ef81"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:318867684519:security-group/sg-04782ba92c952b2eb",
            "description": "Allow incoming HTTP connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04782ba92c952b2eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_web_sg",
            "name_prefix": "",
            "owner_id": "318867684519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "Bastion-SG",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "tags_all": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "Bastion-SG",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d810c316726b8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datalayer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:318867684519:security-group/sg-0d8b8d91f2fd862d6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8b8d91f2fd862d6",
            "ingress": [],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "318867684519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "tags_all": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d810c316726b8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:318867684519:security-group/sg-00635e88a5640db99",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00635e88a5640db99",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "318867684519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "tags_all": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d810c316726b8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:318867684519:security-group/sg-0982bbe6ad0cfebdc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0982bbe6ad0cfebdc",
            "ingress": [],
            "name": "my-alb-sg",
            "name_prefix": "",
            "owner_id": "318867684519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "tags_all": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d810c316726b8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:318867684519:security-group/sg-06bec414d7067c4dd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06bec414d7067c4dd",
            "ingress": [],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "318867684519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "nginx-SG",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "tags_all": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "nginx-SG",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d810c316726b8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:318867684519:security-group/sg-0bb98a122ba284869",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb98a122ba284869",
            "ingress": [],
            "name": "my-asg-sg",
            "name_prefix": "",
            "owner_id": "318867684519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "tags_all": {
              "Billing-Account": "318867684519",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "tobi.salako@cloudboosta.co.uk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d810c316726b8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-234893",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06bec414d7067c4dd",
            "security_group_rule_id": "sgr-0f0ac9978f9701239",
            "self": false,
            "source_security_group_id": "sg-04782ba92c952b2eb",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-4045048375",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0982bbe6ad0cfebdc",
            "security_group_rule_id": "sgr-06677b0e7d5de58bf",
            "self": false,
            "source_security_group_id": "sg-06bec414d7067c4dd",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3392574104",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d8b8d91f2fd862d6",
            "security_group_rule_id": "sgr-0cfc08dda692a1892",
            "self": false,
            "source_security_group_id": "sg-04782ba92c952b2eb",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.datalayer-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2181563410",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d8b8d91f2fd862d6",
            "security_group_rule_id": "sgr-0505b3002dceb5f26",
            "self": false,
            "source_security_group_id": "sg-0bb98a122ba284869",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-298751128",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d8b8d91f2fd862d6",
            "security_group_rule_id": "sgr-06ee3f41b4ea829f7",
            "self": false,
            "source_security_group_id": "sg-0bb98a122ba284869",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-2566876653",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06bec414d7067c4dd",
            "security_group_rule_id": "sgr-05de041d2781ca812",
            "self": false,
            "source_security_group_id": "sg-00635e88a5640db99",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-2766758242",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bb98a122ba284869",
            "security_group_rule_id": "sgr-0c1d491c13be3d540",
            "self": false,
            "source_security_group_id": "sg-0982bbe6ad0cfebdc",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1382436843",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bb98a122ba284869",
            "security_group_rule_id": "sgr-07bd16bd4592083e6",
            "self": false,
            "source_security_group_id": "sg-04782ba92c952b2eb",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:318867684519:subnet/subnet-05f158a03d0d5fe90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f158a03d0d5fe90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318867684519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-private-subnet"
            },
            "tags_all": {
              "Name": "project-private-subnet"
            },
            "vpc_id": "vpc-0a3d810c316726b8e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:318867684519:subnet/subnet-0ef68cc6e0cd4ef81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef68cc6e0cd4ef81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318867684519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-private-subnet"
            },
            "tags_all": {
              "Name": "project-private-subnet"
            },
            "vpc_id": "vpc-0a3d810c316726b8e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:318867684519:subnet/subnet-01bbd08ed5c86391f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bbd08ed5c86391f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "318867684519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-public-subnet"
            },
            "tags_all": {
              "Name": "project-public-subnet"
            },
            "vpc_id": "vpc-0a3d810c316726b8e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:318867684519:vpc/vpc-0a3d810c316726b8e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d44806b556bdd67b",
            "default_route_table_id": "rtb-07e4dc506cf3a830a",
            "default_security_group_id": "sg-0df64632283e27a34",
            "dhcp_options_id": "dopt-029ca7fb137e931e6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a3d810c316726b8e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e4dc506cf3a830a",
            "owner_id": "318867684519",
            "tags": {
              "Name": "ak-vpc"
            },
            "tags_all": {
              "Name": "ak-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}